developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/OJSERLIB__VEDA_Individual__c.object-meta.xml
<CustomObject>
    <label>VEDA Individual</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>VEDA Individual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Individuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>