developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__bureau_reference__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__bureau_reference__c</fullName>
    <label>Bureau Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>