developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>