developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__DateOfBirthfirstReportedDate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__DateOfBirthfirstReportedDate__c</fullName>
    <label>DateOfBirthfirstReportedDate</label>
    <type>Date</type>
</CustomField>