developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__DateOfBirthlastReportedDate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__DateOfBirthlastReportedDate__c</fullName>
    <label>DateOfBirthlastReportedDate</label>
    <type>Date</type>
</CustomField>