developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__DriversLicencefirstReportedDate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__DriversLicencefirstReportedDate__c</fullName>
    <label>DriversLicencefirstReportedDate</label>
    <type>Date</type>
</CustomField>