developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__DriversLicencelastReportedDate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__DriversLicencelastReportedDate__c</fullName>
    <label>DriversLicencelastReportedDate</label>
    <type>Date</type>
</CustomField>