developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__Family_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Family_Name__c</fullName>
    <label>Family Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>