developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__First_Given_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__First_Given_Name__c</fullName>
    <label>First Given Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>