developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__Gender__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Gender__c</fullName>
    <label>Gender</label>
    <length>8</length>
    <type>Text</type>
</CustomField>