developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__IndividualNameFirstReportedDate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IndividualNameFirstReportedDate__c</fullName>
    <label>IndividualNameFirstReportedDate</label>
    <type>Date</type>
</CustomField>