developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__IndividualNamelastReportedDate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IndividualNamelastReportedDate__c</fullName>
    <label>IndividualNamelastReportedDate</label>
    <type>Date</type>
</CustomField>