developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__Is_Deceased__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deceased</label>
    <type>Checkbox</type>
</CustomField>