developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__Is_Primary_Match__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Primary_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Match</label>
    <type>Checkbox</type>
</CustomField>