developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual__c/fields/OJSERLIB__Other_Given_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Other_Given_Name__c</fullName>
    <label>Other Given Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>